--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>Flexbox Pricing Table</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Sono:wght@400;700&display=swap" rel="stylesheet">
-  <link href='https://unpkg.com/css.gg@2.0.0/icons/css/check.css' rel='stylesheet'>
+  <link href="https://fonts.googleapis.com/css2?family=Sono:wght@400;700&display=swap" rel="stylesheet" type="text/css">
+  <link href='https://unpkg.com/css.gg@2.0.0/icons/css/check.css' rel='stylesheet' type="text/css">
   <style>
     body {
       font-family: 'Sono', sans-serif;
